feat: selection block savinG

--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -157,13 +157,13 @@
    "out/cljs-runtime/chromex.protocols.chrome_event_channel.js",
    "out/cljs-runtime/chromex.protocols.chrome_event_subscription.js",
    "out/cljs-runtime/chromex.chrome_event_channel.js",
-   "out/cljs-runtime/chromex.protocols.chrome_port.js",
    "out/cljs-runtime/oops.sdefs.js",
    "out/cljs-runtime/oops.helpers.js",
    "out/cljs-runtime/oops.config.js", "out/cljs-runtime/oops.state.js",
    "out/cljs-runtime/oops.messages.js",
    "out/cljs-runtime/oops.schema.js", "out/cljs-runtime/oops.core.js",
    "out/cljs-runtime/chromex.chrome_event_subscription.js",
+   "out/cljs-runtime/chromex.protocols.chrome_port.js",
    "out/cljs-runtime/chromex.protocols.chrome_port_state.js",
    "out/cljs-runtime/chromex.support.js",
    "out/cljs-runtime/chromex.chrome_port.js",
@@ -183,6 +183,7 @@
    "out/cljs-runtime/shadow.module.bg-shared.append.js",
    "out/cljs-runtime/chromex.ext.storage.js",
    "out/cljs-runtime/lamb.background.storage.js",
+   "out/cljs-runtime/lamb.background.selection.js",
    "out/cljs-runtime/chromex.ext.context_menus.js",
    "out/cljs-runtime/lamb.background.core.js",
    "out/cljs-runtime/lamb.background.js",
@@ -344,7 +345,6 @@
     "out/cljs-runtime/chromex.protocols.chrome_event_channel.js",
     "out/cljs-runtime/chromex.protocols.chrome_event_subscription.js",
     "out/cljs-runtime/chromex.chrome_event_channel.js",
-    "out/cljs-runtime/chromex.protocols.chrome_port.js",
     "out/cljs-runtime/oops.sdefs.js",
     "out/cljs-runtime/oops.helpers.js",
     "out/cljs-runtime/oops.config.js",
@@ -352,6 +352,7 @@
     "out/cljs-runtime/oops.messages.js",
     "out/cljs-runtime/oops.schema.js", "out/cljs-runtime/oops.core.js",
     "out/cljs-runtime/chromex.chrome_event_subscription.js",
+    "out/cljs-runtime/chromex.protocols.chrome_port.js",
     "out/cljs-runtime/chromex.protocols.chrome_port_state.js",
     "out/cljs-runtime/chromex.support.js",
     "out/cljs-runtime/chromex.chrome_port.js",
