feat: handle popup calls

--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -153,7 +153,6 @@
    "out/cljs-runtime/shadow.cljs.devtools.client.hud.js",
    "out/cljs-runtime/shadow.cljs.devtools.client.websocket.js",
    "out/cljs-runtime/shadow.cljs.devtools.client.browser.js",
-   "out/cljs-runtime/shadow.module.shared.append.js",
    "out/cljs-runtime/chromex.protocols.chrome_event_channel.js",
    "out/cljs-runtime/chromex.protocols.chrome_event_subscription.js",
    "out/cljs-runtime/chromex.chrome_event_channel.js",
@@ -177,6 +176,8 @@
    "out/cljs-runtime/chromex.marshalling.js",
    "out/cljs-runtime/chromex.version.js",
    "out/cljs-runtime/chromex.core.js",
+   "out/cljs-runtime/chromex.ext.runtime.js",
+   "out/cljs-runtime/shadow.module.shared.append.js",
    "out/cljs-runtime/shadow.module.bg-shared.append.js",
    "out/cljs-runtime/chromex.ext.tabs.js",
    "out/cljs-runtime/chromex.ext.storage.js",
@@ -339,7 +340,33 @@
     "out/cljs-runtime/shadow.cljs.devtools.client.hud.js",
     "out/cljs-runtime/shadow.cljs.devtools.client.websocket.js",
     "out/cljs-runtime/shadow.cljs.devtools.client.browser.js",
+    "out/cljs-runtime/chromex.protocols.chrome_event_channel.js",
+    "out/cljs-runtime/chromex.protocols.chrome_event_subscription.js",
+    "out/cljs-runtime/chromex.chrome_event_channel.js",
+    "out/cljs-runtime/oops.sdefs.js",
+    "out/cljs-runtime/oops.helpers.js",
+    "out/cljs-runtime/oops.config.js",
+    "out/cljs-runtime/oops.state.js",
+    "out/cljs-runtime/oops.messages.js",
+    "out/cljs-runtime/oops.schema.js", "out/cljs-runtime/oops.core.js",
+    "out/cljs-runtime/chromex.chrome_event_subscription.js",
+    "out/cljs-runtime/chromex.protocols.chrome_port.js",
+    "out/cljs-runtime/chromex.protocols.chrome_port_state.js",
+    "out/cljs-runtime/chromex.support.js",
+    "out/cljs-runtime/chromex.chrome_port.js",
+    "out/cljs-runtime/chromex.protocols.chrome_storage_area.js",
+    "out/cljs-runtime/chromex.chrome_storage_area.js",
+    "out/cljs-runtime/chromex.error.js",
+    "out/cljs-runtime/chromex.defaults.js",
+    "out/cljs-runtime/chromex.config.js",
+    "out/cljs-runtime/chromex.protocols.chrome_content_setting.js",
+    "out/cljs-runtime/chromex.chrome_content_setting.js",
+    "out/cljs-runtime/chromex.marshalling.js",
+    "out/cljs-runtime/chromex.version.js",
+    "out/cljs-runtime/chromex.core.js",
+    "out/cljs-runtime/chromex.ext.runtime.js",
     "out/cljs-runtime/shadow.module.shared.append.js",
+    "out/cljs-runtime/lamb.content_script.core.js",
     "out/cljs-runtime/lamb.content_script.js",
     "out/cljs-runtime/shadow.module.content-script.append.js"],
    "matches":["<all_urls>"],
