chore: rename lamb->aeterna

--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -4,7 +4,7 @@
   "tabs"],
  "browser_action":
  {"default_title":"Show the popup", "default_popup":"popup.html"},
- "name":"Chromex Sample Shadow",
+ "name":"aeterna",
  "background":
  {"scripts":
   ["out/background.js", "out/cljs-runtime/goog.debug.error.js",
@@ -181,11 +181,11 @@
    "out/cljs-runtime/shadow.module.bg-shared.append.js",
    "out/cljs-runtime/chromex.ext.tabs.js",
    "out/cljs-runtime/chromex.ext.storage.js",
-   "out/cljs-runtime/lamb.background.storage.js",
-   "out/cljs-runtime/lamb.background.selection.js",
+   "out/cljs-runtime/aeterna.background.storage.js",
+   "out/cljs-runtime/aeterna.background.selection.js",
    "out/cljs-runtime/chromex.ext.context_menus.js",
-   "out/cljs-runtime/lamb.background.core.js",
-   "out/cljs-runtime/lamb.background.js",
+   "out/cljs-runtime/aeterna.background.core.js",
+   "out/cljs-runtime/aeterna.background.js",
    "out/cljs-runtime/shadow.module.background.append.js"],
   "persistent":false},
  "manifest_version":2,
@@ -342,8 +342,8 @@
     "out/cljs-runtime/shadow.cljs.devtools.client.browser.js",
     "out/cljs-runtime/chromex.support.js",
     "out/cljs-runtime/shadow.module.shared.append.js",
-    "out/cljs-runtime/lamb.content_script.core.js",
-    "out/cljs-runtime/lamb.content_script.js",
+    "out/cljs-runtime/aeterna.content_script.core.js",
+    "out/cljs-runtime/aeterna.content_script.js",
     "out/cljs-runtime/shadow.module.content-script.append.js"],
    "matches":["<all_urls>"],
    "run_at":"document_end"}],
