feat: show retrieved date list on popup

--- a/resources/unpacked/manifest.json
+++ b/resources/unpacked/manifest.json
@@ -1,4 +1,4 @@
-{"description":"This example project is using shadow-cljs",
+{"description":"Aterna :)",
  "permissions":
  ["activeTab", "storage", "http://*/*", "https://*/*", "contextMenus",
   "tabs"],
@@ -153,8 +153,6 @@
    "out/cljs-runtime/shadow.cljs.devtools.client.hud.js",
    "out/cljs-runtime/shadow.cljs.devtools.client.websocket.js",
    "out/cljs-runtime/shadow.cljs.devtools.client.browser.js",
-   "out/cljs-runtime/chromex.support.js",
-   "out/cljs-runtime/shadow.module.shared.append.js",
    "out/cljs-runtime/chromex.protocols.chrome_event_channel.js",
    "out/cljs-runtime/chromex.protocols.chrome_event_subscription.js",
    "out/cljs-runtime/chromex.chrome_event_channel.js",
@@ -166,6 +164,7 @@
    "out/cljs-runtime/chromex.chrome_event_subscription.js",
    "out/cljs-runtime/chromex.protocols.chrome_port.js",
    "out/cljs-runtime/chromex.protocols.chrome_port_state.js",
+   "out/cljs-runtime/chromex.support.js",
    "out/cljs-runtime/chromex.chrome_port.js",
    "out/cljs-runtime/chromex.protocols.chrome_storage_area.js",
    "out/cljs-runtime/chromex.chrome_storage_area.js",
@@ -178,6 +177,7 @@
    "out/cljs-runtime/chromex.version.js",
    "out/cljs-runtime/chromex.core.js",
    "out/cljs-runtime/chromex.ext.runtime.js",
+   "out/cljs-runtime/shadow.module.shared.append.js",
    "out/cljs-runtime/shadow.module.bg-shared.append.js",
    "out/cljs-runtime/chromex.ext.tabs.js",
    "out/cljs-runtime/chromex.ext.storage.js",
@@ -340,7 +340,31 @@
     "out/cljs-runtime/shadow.cljs.devtools.client.hud.js",
     "out/cljs-runtime/shadow.cljs.devtools.client.websocket.js",
     "out/cljs-runtime/shadow.cljs.devtools.client.browser.js",
+    "out/cljs-runtime/chromex.protocols.chrome_event_channel.js",
+    "out/cljs-runtime/chromex.protocols.chrome_event_subscription.js",
+    "out/cljs-runtime/chromex.chrome_event_channel.js",
+    "out/cljs-runtime/oops.sdefs.js",
+    "out/cljs-runtime/oops.helpers.js",
+    "out/cljs-runtime/oops.config.js",
+    "out/cljs-runtime/oops.state.js",
+    "out/cljs-runtime/oops.messages.js",
+    "out/cljs-runtime/oops.schema.js", "out/cljs-runtime/oops.core.js",
+    "out/cljs-runtime/chromex.chrome_event_subscription.js",
+    "out/cljs-runtime/chromex.protocols.chrome_port.js",
+    "out/cljs-runtime/chromex.protocols.chrome_port_state.js",
     "out/cljs-runtime/chromex.support.js",
+    "out/cljs-runtime/chromex.chrome_port.js",
+    "out/cljs-runtime/chromex.protocols.chrome_storage_area.js",
+    "out/cljs-runtime/chromex.chrome_storage_area.js",
+    "out/cljs-runtime/chromex.error.js",
+    "out/cljs-runtime/chromex.defaults.js",
+    "out/cljs-runtime/chromex.config.js",
+    "out/cljs-runtime/chromex.protocols.chrome_content_setting.js",
+    "out/cljs-runtime/chromex.chrome_content_setting.js",
+    "out/cljs-runtime/chromex.marshalling.js",
+    "out/cljs-runtime/chromex.version.js",
+    "out/cljs-runtime/chromex.core.js",
+    "out/cljs-runtime/chromex.ext.runtime.js",
     "out/cljs-runtime/shadow.module.shared.append.js",
     "out/cljs-runtime/aeterna.content_script.core.js",
     "out/cljs-runtime/aeterna.content_script.js",
